# Solana-sgmc-v1.0-DEMO-

./: .gitignore  DEBUG_REPORT.md  README.md  dexscreener.sqlite  pairs_one.txt  pyproject.toml  snapshots.csv  snapshots.json
dexscreener_screener/: __init__.py  cli.py  client.py  collector.py  config.py  db.py  logging_setup.py  models.py
dexscreener_screener.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dexscreener_screener/client/: __init__.py  dexscreener.py
dexscreener_screener/core/: __init__.py  lock.py
dexscreener_screener/pipeline/: __init__.py  collector.py
dexscreener_screener/storage/: __init__.py  sqlite.py
dexscreener_screener/strategy/: __init__.py  engine.py  post_analyzer.py  trigger_analyzer.py
scripts/: arch_check.py  autopilot.py  cli_check.ps1  db_check.py  db_doctor.py  debug_all.ps1  e2e_live.ps1  e2e_live_summary.py  link_check.py  prune_check.ps1  prune_schema_check.py  run.ps1  smoke_test.py  strategy_selfcheck.py  verify_collect_new.py
web/: .env.example  README.md  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ConnectionBanner.tsx
web/components/dashboard/: DashboardScene.tsx  MiniChart.tsx  PresetsBar.tsx  TokenDrawer.tsx  TokenTable.tsx
web/components/launcher/: LauncherScene.tsx
web/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx
web/lib/: api.ts  mock-api.ts  schemas.ts  types.ts  utils.ts
web/store/: use-app-store.ts
