[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dexscreener-screener"
version = "1.0.0"
description = "DexScreener Screener v1: collect and normalize Solana pair data from public API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[project.scripts]
dexscreener-screener = "dexscreener_screener.cli:main"

[tool.setuptools.packages.find]
include = ["dexscreener_screener*"]
